--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -14,24 +14,66 @@
             <ColumnDefinition Width="550"/>
         </Grid.ColumnDefinitions>
 
-        <StackPanel Orientation="Vertical">
-            <Expander>
-                <!--<ScrollViewer>-->
-                <StackPanel>
-                    <ListView x:Name="RadioButtonList">
-                        <ListView.ItemTemplate>
-                            <DataTemplate>
-                                <RadioButton GroupName="radioList" Content="{Binding Name}" Tag="{Binding Name}" ScrollViewer.VerticalScrollBarVisibility="Hidden" Checked="RadioButton_Checked"/>
-                            </DataTemplate>
-                        </ListView.ItemTemplate>
-                    </ListView>
-                </StackPanel>
-                <!--</ScrollViewer>-->
-            </Expander>
-            <Expander>
-                <ScrollViewer/>
-            </Expander>
-        </StackPanel>
+        <GroupBox Header="Настройки">
+            <StackPanel Orientation="Vertical" Margin="0 10 0 0">
+                <Expander Header="Изображения">
+                    <!--<ScrollViewer>-->
+                    <StackPanel>
+                        <ListView x:Name="RadioButtonList">
+                            <ListView.ItemTemplate>
+                                <DataTemplate>
+                                    <RadioButton GroupName="radioList" Content="{Binding Name}" Tag="{Binding Name}" ScrollViewer.VerticalScrollBarVisibility="Hidden" Checked="RadioButton_Checked"/>
+                                </DataTemplate>
+                            </ListView.ItemTemplate>
+                        </ListView>
+                    </StackPanel>
+                    <!--</ScrollViewer>-->
+                </Expander>
+                <Expander Height="auto" Header="Трансформация">
+                    <StackPanel Orientation="Vertical">
+                        <ScrollViewer Margin="5" VerticalScrollBarVisibility="Auto">
+                            <Grid Height="250">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition/>
+                                    <RowDefinition/>
+                                    <RowDefinition/>
+                                    <RowDefinition/>
+                                    <RowDefinition/>
+                                    <RowDefinition/>
+                                    <RowDefinition/>
+                                </Grid.RowDefinitions>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition/>
+                                    <ColumnDefinition/>
+                                </Grid.ColumnDefinitions>
+
+                                <TextBlock Text="Ширина:"/>
+                                <Slider x:Name="sWidth" ValueChanged="Slider_ValueChanged" Grid.Column="1"/>
+
+                                <TextBlock Grid.Row="1" Text="Высота:"/>
+                                <Slider x:Name="sHeight" Grid.Column="1" Grid.Row="1"/>
+
+                                <TextBlock Grid.Row="2" Text="Сдвиг по X:"/>
+                                <Slider x:Name="sMoveX" Grid.Column="1" Grid.Row="2"/>
+
+                                <TextBlock Grid.Row="3" Text="Сдвиг по Y:"/>
+                                <Slider x:Name="sMoveY" Grid.Column="1" Grid.Row="3"/>
+
+                                <TextBlock Grid.Row="4" Text="Наклон по X:"/>
+                                <Slider x:Name="sTiltX" Grid.Column="1" Grid.Row="4"/>
+
+                                <TextBlock Grid.Row="5" Text="Наклон по Y:"/>
+                                <Slider x:Name="sTiltY"  Grid.Column="1" Grid.Row="5"/>
+
+                                <TextBlock Grid.Row="6" Text="По часовой:"/>
+                                <Slider x:Name="sClockwise" Grid.Column="1" Grid.Row="6"/>
+                            </Grid>
+                        </ScrollViewer>
+                    </StackPanel>
+                </Expander>
+            </StackPanel>
+        </GroupBox>
+
         <Image x:Name="ImageSpace" Grid.Column="1"/>
     </Grid>
 </Window>
