--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,19 +5,26 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ImageTransformation"
         mc:Ignorable="d"
-        Title="Image Transformation" Height="450" Width="800">
+        Title="Image Transformation" Height="550" Width="900">
 
 
+    <Window.Resources>
+        <Style TargetType="Slider">
+            <Setter Property="Minimum" Value="0"/>
+            <Setter Property="Value" Value="0"/>
+            <EventSetter Event="ValueChanged" Handler="Slider_ValueChanged"/>
+        </Style>
+    </Window.Resources>
+    
     <Grid Margin="5">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
-            <ColumnDefinition Width="550"/>
+            <ColumnDefinition Width="350"/>
+            <ColumnDefinition />
         </Grid.ColumnDefinitions>
 
         <GroupBox Header="Настройки">
             <StackPanel Orientation="Vertical" Margin="0 10 0 0">
                 <Expander Header="Изображения">
-                    <!--<ScrollViewer>-->
                     <StackPanel>
                         <ListView x:Name="RadioButtonList">
                             <ListView.ItemTemplate>
@@ -27,7 +34,6 @@
                             </ListView.ItemTemplate>
                         </ListView>
                     </StackPanel>
-                    <!--</ScrollViewer>-->
                 </Expander>
                 <Expander Height="auto" Header="Трансформация">
                     <StackPanel Orientation="Vertical">
@@ -48,32 +54,31 @@
                                 </Grid.ColumnDefinitions>
 
                                 <TextBlock Text="Ширина:"/>
-                                <Slider x:Name="sWidth" ValueChanged="Slider_ValueChanged" Grid.Column="1"/>
+                                <Slider x:Name="sWidth" Grid.Column="1"/>
 
                                 <TextBlock Grid.Row="1" Text="Высота:"/>
                                 <Slider x:Name="sHeight" Grid.Column="1" Grid.Row="1"/>
 
                                 <TextBlock Grid.Row="2" Text="Сдвиг по X:"/>
-                                <Slider x:Name="sMoveX" Grid.Column="1" Grid.Row="2"/>
+                                <Slider x:Name="sMoveX" Maximum="150" Value="0" Minimum="-150" Grid.Column="1" Grid.Row="2"/>
 
                                 <TextBlock Grid.Row="3" Text="Сдвиг по Y:"/>
-                                <Slider x:Name="sMoveY" Grid.Column="1" Grid.Row="3"/>
+                                <Slider x:Name="sMoveY" Maximum="150" Value="0" Minimum="-150" Grid.Column="1" Grid.Row="3"/>
 
                                 <TextBlock Grid.Row="4" Text="Наклон по X:"/>
-                                <Slider x:Name="sTiltX" Grid.Column="1" Grid.Row="4"/>
+                                <Slider x:Name="sTiltX" Maximum="180" Grid.Column="1" Grid.Row="4"/>
 
                                 <TextBlock Grid.Row="5" Text="Наклон по Y:"/>
-                                <Slider x:Name="sTiltY"  Grid.Column="1" Grid.Row="5"/>
+                                <Slider x:Name="sTiltY" Maximum="180" Grid.Column="1" Grid.Row="5"/>
 
                                 <TextBlock Grid.Row="6" Text="По часовой:"/>
-                                <Slider x:Name="sClockwise" Grid.Column="1" Grid.Row="6"/>
+                                <Slider x:Name="sClockwise" Maximum="360" Grid.Column="1" Grid.Row="6"/>
                             </Grid>
                         </ScrollViewer>
                     </StackPanel>
                 </Expander>
             </StackPanel>
         </GroupBox>
-
-        <Image x:Name="ImageSpace" Grid.Column="1"/>
+        <Image x:Name="ImageSpace" Stretch="Fill" Grid.Column="1"/>
     </Grid>
 </Window>
